# WebServ

./: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  Config.hpp  Connection.cpp  Connection.hpp  EventLoop.cpp  EventLoop.hpp  Makefile  README.md  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  config.conf  config.cpp  config.hpp  main.cpp  printConfig.cpp  requirements.txt  server.cpp  server.hpp  txt  upload-file.txt
cgi-bin/: calculator.py  pass_generator.py  upload-file.txt  upload.py  upload.sh  weather.py
cgi-test/: GET  mocking-request.sh  request.txt  run  upload.html  upload.py
includes/: CGIServer.hpp  Config.hpp  Connection.hpp  Delete.hpp  EventLoop.hpp  Get.hpp  IHttpMethod.hpp  ParseBodyInfo.hpp  ParsePathInfo.hpp  PathChecker.hpp  Post.hpp  PrintRequestInfo.hpp  Request.hpp  RequestParser.hpp  RequestReader.hpp  Response.hpp  Server.hpp  SignalHandler.hpp  TimeNow.hpp
notes/: config.json  epoll.cpp  notes  test-telnet
old/: server_old.cpp  server_old.hpp
serverRoot/: 404.html  body_limit.html  delete.html  delete_test_file.txt  serverUpload.html
src/: CGIServer.cpp  Config.cpp  Connection.cpp  Delete.cpp  EventLoop.cpp  Get.cpp  IHttpMethod.cpp  ParseBodyInfo.cpp  ParsePathInfo.cpp  PathChecker.cpp  Post.cpp  PrintRequestInfo.cpp  Request.cpp  RequestParser.cpp  RequestReader.cpp  Response.cpp  Server.cpp  SignalHandler.cpp  TimeNow.cpp  main.cpp  printConfig.cpp
test/: DELETE-tests.cpp  GET-curl-status-codes-tests.cpp  GET-curl-status-codes-tests.cpp.cpp  Methods-Unit-Tests.cpp  Methosd-Unit-Tests.cpp  POST-Upload-curl-tests.cpp  POST-curl.cpp  POST-tests.cpp  POSTChunked-curl-tests.cpp  cgi-tests.cpp  config-tests.cpp  curl-tests.cpp  directory-tests.cpp  eval-tests.cpp  mutiples-server.cpp  redirection-tests.cpp  request-info-tests.cpp  route-tests.cpp  selenium_script.py  subjecgt-tests.cpp  subject-tests.cpp  test-firefox  test-firefox.py  tests.hpp  upload.html  (+1 more)
(+75 files in other folders)
